--- a/package.json
+++ b/package.json
@@ -27,12 +27,16 @@
   "homepage": "https://github.com/mattmazzola/schultz-tables-api#readme",
   "dependencies": {
     "cors": "^2.8.3",
+    "documentdb": "^1.11.0",
+    "dotenv": "^4.0.0",
     "express": "^4.15.2",
     "express-graphql": "^0.6.4",
     "graphql": "^0.9.5"
   },
   "devDependencies": {
     "@types/cors": "^2.8.1",
+    "@types/documentdb": "^1.10.1",
+    "@types/dotenv": "^4.0.0",
     "@types/express": "^4.0.35",
     "@types/express-graphql": "0.0.33",
     "@types/node": "^7.0.14",
